# automated-dl

./: .env.example  .gitignore  .ports.json  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  merge-methods.yml
.github/workflows/: changelog.yml  ci.yml  docker-image.yml  release-drafter.yml
scripts/: catchup  setup
src/: main.py
src/automateddl/: __init__.py  automateddl.py  lockbykey.py
tests/: __init__.py  conftest.py  http_server.py  test_automateddl.py  test_media_detection.py
tests/data/configs/: default.conf
tests/data/sessions/: all.txt  episode.txt  movie.txt  multi-rar-missing.txt  multi-rar.txt  rar.txt  very-small-download-nfo.txt  very-small-download.txt  zip.txt
tests/data/static/: multi.part1.rar  multi.part2.rar  multi.part3.rar  multi.part4.rar  simple.rar  simple.txt
